--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,400;0,600;0,900;1,100;1,700&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family:'Work Sans', sans-serif;
+    max-height: fit-content;
+}
+body{
+    background-color: #45CBE6;
+
+}
